--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^6.1.6",
     "@mui/x-data-grid": "^7.22.0",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-use": "^17.4.0"
